--- a/fairplay/styles/signup-in.css
+++ b/fairplay/styles/signup-in.css
@@ -5,9 +5,10 @@
     --bg-color: #fff;
     --bg-color-alt: #666;
     --main-color: #323232;
-      /* display: flex; */
-      /* flex-direction: column; */
-      /* align-items: center; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
   }
   .center-container {
     display: flex;
@@ -17,17 +18,6 @@
   }
   
   /* switch card */
-  .switch {
-    transform: translateY(-200px);
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 30px;
-    width: 50px;
-    height: 20px;
-  }
   
   .card-side::before {
     position: absolute;
@@ -57,73 +47,15 @@
     height: 0;
   }
   
-  .slider {
-    box-sizing: border-box;
-    border-radius: 5px;
-    border: 2px solid var(--main-color);
-    box-shadow: 4px 4px var(--main-color);
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: var(--bg-colorcolor);
-    transition: 0.3s;
-  }
-  
-  .slider:before {
-    box-sizing: border-box;
-    position: absolute;
-    content: "";
-    height: 20px;
-    width: 20px;
-    border: 2px solid var(--main-color);
-    border-radius: 5px;
-    left: -2px;
-    bottom: 2px;
-    background-color: var(--bg-color);
-    box-shadow: 0 3px 0 var(--main-color);
-    transition: 0.3s;
-  }
-  
-  .toggle:checked + .slider {
-    background-color: var(--input-focus);
-  }
-  
-  .toggle:checked + .slider:before {
-    transform: translateX(30px);
-  }
-  
-  .toggle:checked ~ .card-side:before {
-    text-decoration: none;
-  }
-  
-  .toggle:checked ~ .card-side:after {
-    text-decoration: underline;
-  }
-  
   /* card */ 
   
   .flip-card__inner {
-    width: 350px;
+    width: 450px;
     height: 350px;
     position: relative;
     background-color: transparent;
     perspective: 1000px;
-      /* width: 100%;
-      height: 100%; */
     text-align: center;
-    transition: transform 0.8s;
-    transform-style: preserve-3d;
-  }
-  
-  .toggle:checked ~ .flip-card__inner {
-    transform: rotateY(180deg);
-  }
-  
-  .toggle:checked ~ .flip-card__front {
-    box-shadow: none;
   }
   
   .flip-card__front, .flip-card__back {
@@ -163,29 +95,6 @@
     font-weight: 900;
     text-align: center;
     color: var(--main-color);
-  }
-  
-  .flip-card__input {
-    width: 250px;
-    height: 40px;
-    border-radius: 5px;
-    border: 2px solid var(--main-color);
-    background-color: var(--bg-color);
-    box-shadow: 4px 4px var(--main-color);
-    font-size: 15px;
-    font-weight: 600;
-    color: var(--font-color);
-    padding: 5px 10px;
-    outline: none;
-  }
-  
-  .flip-card__input::placeholder {
-    color: var(--font-color-sub);
-    opacity: 0.8;
-  }
-  
-  .flip-card__input:focus {
-    border: 2px solid var(--input-focus);
   }
   
   .flip-card__btn:active, .button-confirm:active {
