--- a/fairplay/styles/signup-in.css
+++ b/fairplay/styles/signup-in.css
@@ -7,57 +7,57 @@ body {
 }
 
 .card {
-  width: 700px; /* Adjusted width */
+  width: 350px;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
   overflow: hidden;
-  margin: 20px; /* Adjusted margin */
+  margin: 10px;
 }
 
 .card-header {
   background-color: #0047AB;
   font-weight: 999;
-  padding: 32px; /* Adjusted padding */
+  padding: 16px;
   text-align: center;
 }
 
 .card-header .text-header {
   margin: 0;
-  font-size: 36px; /* Adjusted font size */
+  font-size: 18px;
   color: rgb(255, 255, 255);
 }
 
 .card-body {
-  padding: 32px; /* Adjusted padding */
+  padding: 16px;
 }
 
 .form-group {
-  margin-bottom: 20px; /* Adjusted margin */
+  margin-bottom: 10px;
 }
 
 .form-group label {
   display: block;
-  font-size: 18px; /* Adjusted font size */
+  font-size: 14px;
   color: #333;
   font-weight: bold;
-  margin-bottom: 5px; /* Adjusted margin */
+  margin-bottom: 1px;
 }
 
 .form-group input[type="text"],
 .form-group input[type="email"],
 .form-group input[type="password"] {
   width: 100%;
-  padding: 16px; /* Adjusted padding */
-  font-size: 18px; /* Adjusted font size */
+  padding: 8px;
+  font-size: 14px;
   border: 1px solid #ccc;
   border-radius: 4px;
 }
 
 .btn {
-  padding: 24px 48px; /* Adjusted padding */
-  margin-left: 26px; /* Adjusted margin */
-  font-size: 24px; /* Adjusted font size */
+  padding: 12px 24px;
+  margin-left: 13px;
+  font-size: 16px;
   border: none;
   border-radius: 4px;
   background-color: #333;
