--- a/fairplay/styles/globals.css
+++ b/fairplay/styles/globals.css
@@ -11,6 +11,10 @@
   font-family: PatchedPersonalUseOnlyBlack;
 }
 
+.app {
+  background-color: #3b3b3b;
+}
+
 .main {
   width: 100vw;
   min-height: 100vh;
@@ -20,53 +24,6 @@
   padding: 120px 24px 160px 24px;
   pointer-events: none;
 }
-
-.main::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: radial-gradient(circle, rgba(2, 0, 36, 0) 0, #fafafa 100%);
-  opacity: 0.09;
-  z-index: -1;
-}
-
-.main:after {
-  content: "";  
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  opacity: 0.4;
-  filter: invert(1);
-}
-
-.gradient {
-    height: fit-content;
-    z-index: 3;
-    width: 100%;
-    max-width: 640px;
-    background-image: radial-gradient(
-      at 27% 37%,
-      hsla(315, 70%, 65%, 1) 0px,
-      transparent 0%
-    ),
-    radial-gradient(at 97% 21%, hsla(300, 80%, 70%, 1) 0px, transparent 50%),
-    radial-gradient(at 52% 99%, hsla(0, 100%, 65%, 1) 0px, transparent 50%),
-    radial-gradient(at 10% 29%, hsla(280, 70%, 70%, 1) 0px, transparent 50%),
-    radial-gradient(at 97% 96%, hsla(0, 100%, 70%, 1) 0px, transparent 50%),
-    radial-gradient(at 33% 50%, hsla(260, 70%, 70%, 1) 0px, transparent 50%),
-    radial-gradient(at 79% 53%, hsla(320, 80%, 75%, 1) 0px, transparent 50%);
-    position: absolute;
-    content: "";
-    width: 100%;
-    height: 100%;
-    filter: blur(100px) saturate(150%);
-    top: 80px;
-    opacity: 0.15;
-  }
 
 @media screen and (max-width: 640px) {
   .main {
