--- a/fairplay/styles/globals.css
+++ b/fairplay/styles/globals.css
@@ -15,3 +15,9 @@
   background-color: #3b3b3b;
   min-height: 100vh;
 }
+
+.error-message {
+  font-size: 0.8rem;
+  color: red;
+  margin-top: 0.2rem;
+}
