--- a/fairplay/styles/globals.css
+++ b/fairplay/styles/globals.css
@@ -158,3 +158,18 @@
 .tab:hover {
   background-color: rgb(223, 223, 223);
 }
+
+.each-slide-effect > div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-size: cover;
+  height: 350px;
+}
+
+.each-slide-effect span {
+  padding: 20px;
+  font-size: 20px;
+  background: #efefef;
+  text-align: center;
+}
